--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lottie-web": "^5.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
