--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@lottiefiles/dotlottie-react": "^0.13.5",
     "@tailwindcss/vite": "^4.1.6",
+    "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.12.2",
     "react": "^19.1.0",
